# kde2-kio-sftp-kde4

./: CMakeLists.txt  kio_sftp.cpp  kio_sftp.h
